Fix search bar text alignment.

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -2,6 +2,9 @@
 
 body, .g, .gsfi {
   font-family: 'Raleway', sans-serif !important;
+}
+
+h2 {
   text-align: center;
 }
 
